fixed spacing

--- a/public/muse/css/index.css
+++ b/public/muse/css/index.css
@@ -95,7 +95,7 @@ html
 	z-index: 143;
 	width: 66px;
 	margin-right: -10000px;
-	left: 928px;
+	left: 917px;
 }
 
 #u282
@@ -198,7 +198,7 @@ html
 	z-index: 157;
 	width: 98px;
 	margin-right: -10000px;
-	left: 717px;
+	left: 706px;
 }
 
 #u209
@@ -253,7 +253,7 @@ html
 	z-index: 164;
 	width: 113px;
 	margin-right: -10000px;
-	left: 815px;
+	left: 804px;
 }
 
 #u217
